<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/reservationIdTF"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reservationStartDateTF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_date"
            app:layout_constraintStart_toStartOf="@+id/reservationIdTF"
            app:layout_constraintTop_toBottomOf="@+id/reservationIdTF" />

        <TextView
            android:id="@+id/reservationDepartureDateTF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/departure_date"
            app:layout_constraintStart_toStartOf="@+id/reservationStartDateTF"
            app:layout_constraintTop_toBottomOf="@+id/reservationStartDateTF" />

        <TextView
            android:id="@+id/reservationPriceTF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hour_price"
            app:layout_constraintStart_toStartOf="@+id/reservationDepartureDateTF"
            app:layout_constraintTop_toBottomOf="@+id/reservationDepartureDateTF" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#dadada"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reservationPriceTF"
            tools:layout_editor_absoluteX="8dp" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>